--- a/src/main/java/View/SellView.form
+++ b/src/main/java/View/SellView.form
@@ -422,7 +422,7 @@
                     <Column editable="true" title="Name" type="java.lang.String"/>
                     <Column editable="true" title="Quantity" type="java.lang.Integer"/>
                     <Column editable="true" title="Price" type="java.lang.Integer"/>
-                    <Column editable="true" title="Total" type="java.lang.Float"/>
+                    <Column editable="true" title="Total" type="java.lang.Double"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
